# webdiff

./: .gitignore  README.md  git-webdiff.sh  pyproject.toml
ts/: CodeDiffContainer.tsx  DiffOptions.tsx  DiffView.tsx  ImageBlinker.tsx  ImageDiff.tsx  MultiFileView.tsx  Root.tsx  SingleImage.tsx  api-utils.ts  image_utils.tsx  index.tsx  options.ts  package-lock.json  unified-api.ts  utils.ts
ts/codediff/: DiffRow.tsx  KeyboardShortcuts.tsx  SkipRow.tsx  codediff.tsx
webdiff/: app.py  argparser.py  diff.py  util.py
webdiff/static/codediff.js/: codediff.css
webdiff/static/css/: jetbrains-mono.css  style.css
webdiff/static/js/: file_diff.js  file_diff.js.map
webdiff/templates/: file_diff.html
