[project]
name = "webdiff"
version = "1.3.0"
description = "Two-column web-based git difftool"
requires-python = "~=3.10"
license = "Apache-2.0"
dependencies = [
    "binaryornot",
    "pillow",
    "unidiff>=0.7.4,<0.8",
    "fastapi>=0.115.0,<0.116",
    "uvicorn>=0.32.0,<0.33",
    "python-multipart>=0.0.20,<0.0.21",
]
